--- a/exercises/Module 5 Templates/mysite/blog/templates/base.html
+++ b/exercises/Module 5 Templates/mysite/blog/templates/base.html
@@ -1,16 +1,17 @@
-<!doctype html>
-
 <html>
 
 <head>
-<title>Blog</title>
-
+	<title>Alfred's Blog</title>
+	{% load static %}
+	<link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
 
-{% block content %}
-{% endblock %}
+	<h1>Alfred's Blog</h1>
+
+	{% block content %}
+	{% endblock %}
 
 </body>
 
