--- a/exercises/Module 5 Templates/wisdompets/adoptions/templates/base.html
+++ b/exercises/Module 5 Templates/wisdompets/adoptions/templates/base.html
@@ -39,7 +39,7 @@
             </div>
             <footer id="colophon">
                 <div class="inner-wrap">
-                    Wisdom Pet Medicine is a fictitious brand created by Lynda.com, solely for the purpose of training. All products and people associated with Wisdom Pet Medicine are also fictitious. Any resemblance to real brands, products, or people is purely coincidental. Please see your veterinarian for all matters related to your pet's health.
+                    Copyrighted All Rights Reserved.
                 </div>
             </footer>
         </div>
